Fix Login Page on mobile

--- a/default.css
+++ b/default.css
@@ -497,6 +497,19 @@ div#loginPage {
   transition: 0.2s ease;
 }
 
+.layout-mobile #loginPage .padded-left.padded-right.padded-bottom-page {
+  width: 90vw !important;
+  max-width: 90vw !important;
+  height: 90vh !important;
+  background: transparent;
+}
+
+.layout-mobile #loginPage {
+  background: linear-gradient(to left, #000000bf, #000000bf),
+    url(https://assets.nflxext.com/ffe/siteui/vlv3/03fdc4bf-72f6-4926-83a7-a76e6a1a5591/9f09b85f-530e-4090-82c3-a60ea2b3177f/US-en-20211115-popsignuptwoweeks-perspective_alpha_website_large.jpg) !important;
+  background-size: cover !important;
+}
+
 /*Login background with radial gradient overlay to make it look like netflix login*/
 
 #loginPage {
